--- a/core.css
+++ b/core.css
@@ -1138,7 +1138,7 @@ The 2 items above are not owned by me, They go to there respected owners
 		height: 30px
 	}
 	#app-mount .typeWindows-1za-n7:after {
-		content: "-------Memories Are Right Here-------";
+		content: "----------Our Memories Are Right Here----------";
 		color: rgb(124,184,255,0.8);
 		font-weight: 500;
 
