--- a/core.css
+++ b/core.css
@@ -1,5 +1,5 @@
 :root{
-    --background: url('https://images.alphacoders.com/632/632525.png');
+    --background: url('https://images3.alphacoders.com/112/thumb-1920-1126903.jpg');
     --activetext-colour: white;
 
     --primary1-colour: red;
