--- a/core.css
+++ b/core.css
@@ -38,12 +38,11 @@ Theme Owned and Made by VaporousCreeper#9514
   
 Background Img: https://wpblink.com/sites/default/files/wallpaper/anime/66761/sword-art-online-ii-wallpapers-hd-66761-327252.png 
 Transparency2 Module: https://raw.githack.com/Ruben7173/Ruben7173.github.io/master/BetterDiscord-Themes/Modules/transparency2.css - By Ruben7173#5048
-
 The 2 items above are not owned by me, They go to there respected owners
 */
 
 :root{
-    --background: url('https://images.alphacoders.com/632/632525.png');
+    --background: url('https://images3.alphacoders.com/112/thumb-1920-1126903.jpg');
     --activetext-colour: white;
 
     --primary1-colour: red;
