--- a/core.css
+++ b/core.css
@@ -36,7 +36,7 @@
 		background-color: var(--secondary3-colour)/*
 Theme Owned and Made by VaporousCreeper#9514
   
-Background Img: https://wpblink.com/sites/default/files/wallpaper/anime/66761/sword-art-online-ii-wallpapers-hd-66761-327252.png 
+Background Img: https://images3.alphacoders.com/112/thumb-1920-1126903.jpg 
 Transparency2 Module: https://raw.githack.com/Ruben7173/Ruben7173.github.io/master/BetterDiscord-Themes/Modules/transparency2.css - By Ruben7173#5048
 The 2 items above are not owned by me, They go to there respected owners
 */
@@ -1137,7 +1137,7 @@ The 2 items above are not owned by me, They go to there respected owners
 		height: 30px
 	}
 	#app-mount .typeWindows-1za-n7:after {
-		content: "----------Our Memories Are Right Here----------";
+		content: "----------------Thiện Đẹp Trai---------------";
 		color: rgb(124,184,255,0.8);
 		font-weight: 500;
 
