--- a/core.css
+++ b/core.css
@@ -2,7 +2,7 @@
     --background: url('https://images3.alphacoders.com/112/thumb-1920-1126903.jpg');
     --activetext-colour: white;
 
-    --primary1-colour: red;
+    --primary1-colour: rgb(16, 16, 16);
     --primary2-colour: rgba(255,0,0,0.5);
     --primary3-colour: rgba(100,0,0,0.6);
 
