--- a/core.css
+++ b/core.css
@@ -3,7 +3,7 @@
     --activetext-colour: white;
 
     --primary1-colour: rgb(16, 16, 16);
-    --primary2-colour: rgba(255,0,0,0.5);
+    --primary2-colour: rgba(167, 99, 99, 0.5);
     --primary3-colour: rgba(100,0,0,0.6);
 
     --secondary1-colour: rgba(50,50,50,0.3);
@@ -619,7 +619,6 @@ The 2 items above are not owned by me, They go to there respected owners
 	#app-mount .authBox-hW6HRx .inputDefault-_djjkz:focus {border-color: var(--primary1-colour);}
 
 	#app-mount .leftSplit-1qOwnR {width: 80%;}
-	}
 	#app-mount .itemCard-v9viV7:hover, 
 	#app-mount .itemCard-v9viV7.active-1xchHY {
 		background-color: var(--secondary2-colour);
