--- a/core.css
+++ b/core.css
@@ -45,7 +45,7 @@ The 2 items above are not owned by me, They go to there respected owners
     --background: url('https://images3.alphacoders.com/112/thumb-1920-1126903.jpg');
     --activetext-colour: white;
 
-    --primary1-colour: red;
+    --primary1-colour: blue;
     --primary2-colour: rgba(255,0,0,0.5);
     --primary3-colour: rgba(100,0,0,0.6);
 
